--- a/.cursorrules.md
+++ b/.cursorrules.md
@@ -1,9 +1,12 @@
 # Playwright Testing - Best Practices
 0. Always use TypeScript instead of vanilla JavaScript whenever possible.
-1. For locators, always bias towards using Playwright's `getByTestId()` locator method instead of any other method.
-2. Add a `data-testid` attribute for elements you need to target if they don't already have a `data-testid` attribute.
-3. Every `data-testid` should follow this format: `ComponentName_camelCaseDescriptorOfElement`
-4. Save any locator to a variable before using it in a test. Examples:
+1. For locators, always bias towards using Playwright's `getByTestId()` locator method to target elements, unless absolutely unable to do so.
+    a. If using `getByTestId()` is not possible, then using a `getByRole()` locator is the next best option.
+    b. If using `getByRole()` is not possible, then using a `getByPlaceholder()` or `getByLabel()` or `getByAltText()` locator is the next best option.
+    c. If using `getByPlaceholder()` or `getByLabel()` or `getByAltText()` is not possible, then using a `getByText()` locator is the next best option.
+    d. If using `getByText()` is not possible, then use whatever locator Playwright allows you to use to target the element.
+        i. If using an Xpath or CSS selector is necessary, please try to take the shortest path to target the element and leverage any available attributes to target the element.
+2. Save any locator to a variable before using it in a test. Examples:
     DO:
     ```typescript
     const exampleSignInButton = page.getByTestId("ExampleButton_signIn");
@@ -13,8 +16,8 @@
     ```typescript
     await page.getByTestId("ExampleButton_signIn").click();
     ```
-5. If logic is being reused in multiple tests, recommend creating a reusable helper/utility function to share this logic across tests. a. If a helper function is created to follow the DRY principle, don't require more arguments in the function than are needed to share the logic. b. Never assert anything in a helper function. Helper functions are reserved for performing a series of user actions, not testing the outcome of those actions.
-6. Whenever possible, use Playwright's built-in features, methods, and utilities instead of "reinventing the wheel" with raw JavaScript or TypeScript solutions to solved problems. Examples:
+3. If logic is being reused in multiple tests, recommend creating a reusable helper/utility function to share this logic across tests. a. If a helper function is created to follow the DRY principle, don't require more arguments in the function than are needed to share the logic. b. Never assert anything in a helper function. Helper functions are reserved for performing a series of user actions, not testing the outcome of those actions.
+4. Whenever possible, use Playwright's built-in features, methods, and utilities instead of "reinventing the wheel" with raw JavaScript or TypeScript solutions to solved problems. Examples:
     DO:
     ```typescript
     await expect(async () => {
@@ -50,5 +53,4 @@
     }
     ```
     The entry point to Playwright's documentation is here if you need to look available features: https://playwright.dev/docs/intro.
-7. When doing so follows the other rules in this file, try to write tests similar to other existing tests in the Playwright suite. The Playwright suite consists of everything within the `test/playwright` directory.
-8. Never use `.not.toBeVisible()` or `.toBeHidden()`. Instead of these, use our custom matcher `.toNotExist()`.
+5. When doing so follows the other rules in this file, try to write tests similar to other existing tests in the Playwright suite. The Playwright suite consists of everything within the `tests/` directory.
