--- a/.cursorrules.md
+++ b/.cursorrules.md
@@ -1,11 +1,11 @@
 # Playwright Testing - Best Practices
 0. Always use TypeScript instead of vanilla JavaScript whenever possible.
 1. For locators, always bias towards using Playwright's `getByTestId()` locator method to target elements, unless absolutely unable to do so.
-    a. If using `getByTestId()` is not possible, then using a `getByRole()` locator is the next best option.
-    b. If using `getByRole()` is not possible, then using a `getByPlaceholder()` or `getByLabel()` or `getByAltText()` locator is the next best option.
-    c. If using `getByPlaceholder()` or `getByLabel()` or `getByAltText()` is not possible, then using a `getByText()` locator is the next best option.
-    d. If using `getByText()` is not possible, then use whatever locator Playwright allows you to use to target the element.
-        i. If using an Xpath or CSS selector is necessary, please try to take the shortest path to target the element and leverage any available attributes to target the element.
+    1. If using `getByTestId()` is not possible, then using a `getByRole()` locator is the next best option.
+    2. If using `getByRole()` is not possible, then using a `getByPlaceholder()` or `getByLabel()` or `getByAltText()` locator is the next best option.
+    3. If using `getByPlaceholder()` or `getByLabel()` or `getByAltText()` is not possible, then using a `getByText()` locator is the next best option.
+    4. If using `getByText()` is not possible, then use whatever locator Playwright allows you to use to target the element.
+        1. If using an Xpath or CSS selector is necessary, please try to take the shortest path to target the element and leverage any available attributes to target the element.
 2. Save any locator to a variable before using it in a test. Examples:
     DO:
     ```typescript
