--- a/.cursorrules.md
+++ b/.cursorrules.md
@@ -4,7 +4,8 @@
     1. If using `getByTestId()` is not possible, then using a `getByRole()` locator is the next best option.
     2. If using `getByRole()` is not possible, then using a `getByPlaceholder()` or `getByLabel()` or `getByAltText()` locator is the next best option.
     3. If using `getByPlaceholder()` or `getByLabel()` or `getByAltText()` is not possible, then using a `getByText()` locator is the next best option.
-    4. If using `getByText()` is not possible, then use whatever locator Playwright allows you to use to target the element.
+        1. If using `getByText`, always use `{ exact: true }` to avoid unwanted partial matches.
+    5. If using `getByText()` is not possible, then use whatever locator Playwright allows you to use to target the element.
         1. If using an Xpath or CSS selector is necessary, please try to take the shortest path to target the element and leverage any available attributes to target the element.
 2. Save any locator to a variable before using it in a test. Examples:
     DO:
